# essentia_project

./: .gitignore  CLAUDE.md  README.md  classifiers.py  feature_extractors.py  main.py  pyproject.toml  sys_utils.py  utils.py
.claude/: settings.local.json
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
models/: approachability_2c-discogs-effnet-1.json  danceability-audioset-vggish-1.json  deam-audioset-vggish-2.json  emomusic-audioset-vggish-2.json  engagement_2c-discogs-effnet-1.json  gender-audioset-vggish-1.json  mood_acoustic-audioset-vggish-1.json  mood_aggressive-audioset-vggish-1.json  mood_electronic-audioset-vggish-1.json  mood_happy-audioset-vggish-1.json  mood_party-audioset-vggish-1.json  mood_relaxed-audioset-vggish-1.json  mood_sad-audioset-vggish-1.json  moods_mirex-audioset-vggish-1.json  muse-audioset-vggish-2.json  timbre-discogs-effnet-1.json  tonal_atonal-audioset-vggish-1.json  voice_instrumental-audioset-vggish-1.json
